--- a/server/package.json
+++ b/server/package.json
@@ -6,14 +6,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-   "watch": "nodemon server.js --ignore client"
-
+    "watch": "nodemon server.js --ignore client"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.1253.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
+    "uuid": "^8.0.0"
   }
 }
